added trickster and livereload

--- a/example/index.html
+++ b/example/index.html
@@ -1,1 +1,5 @@
+<div id='my-element'></div>
 <script type='text/javascript' src="../dist/bundle.js"></script>
+<script type='text/javascript'>
+  var t = new Trickster('my-element')
+</script>
