--- a/example/index.html
+++ b/example/index.html
@@ -1,5 +1,39 @@
-<div id='my-element'></div>
-<script type='text/javascript' src="../dist/bundle.js"></script>
+<style>
+  #tabs {
+    width: 250px;
+    margin: 0 auto;
+    font-size: 10px
+  }
+
+  #shapes {
+    height: 300px;
+    overflow-y: scroll;
+  }
+
+  table {
+    font-size: 12px;
+  }
+
+  td {
+    padding: 0 12px;
+  }
+</style>
+
+<div id='tabs'>
+  <ul>
+    <li><a href='#shapes'>Shapes</a></li>
+  </ul>
+
+  <div id='shapes'></div>
+</div>
+
+<link rel='stylesheet' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.min.css' />
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+<script type='text/javascript' src="../dist/trickster.js"></script>
+
 <script type='text/javascript'>
-  var t = new Trickster('my-element')
+  var t = new Trickster('shapes');
+  tabs = $('#tabs').tabs();
 </script>
