--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 <script type='text/javascript' src="trickster.js"></script>
 
 <script type='text/javascript'>
-  window.t = new Trickster('shapes');
+  t = new Trickster('shapes');
   tabs = $('#tabs').tabs();
 </script>
